# watch2win-cloud-infrastructure

./: .gitignore  Readme.md  build_docker_images.sh  build_production_images.sh  docker-compose-prod.yml  docker-compose.yml
.github/workflows/: build_auth_docker.yaml  build_processor_docker.yaml  deploy_swarm_stacks.yaml
database/: README.md
deploy/: .env.example  create_monitoring_swarm_configs.sh
monitoring/: alert.rules  alertmanager.yml  loki-config.yaml  prometheus.yml
monitoring/dashboard/: system-overview.json
setup-instructions/: .gitignore  certificates.md
setup-instructions/session_1/: docker-compose-with-traefik-and-certs.yml  docker-compose-with-traefik.yml  docker-compose.yml  readme.md
setup-instructions/session_2/: build_docker_images.sh  docker-compose.yml  readme.md
setup-instructions/session_3/: docker-compose.yml  readme.md
setup-instructions/session_4/: docker-compose.yml  readme.md
setup-instructions/session_5/: docker-compose-prod.yml  docker-compose.yml  readme.md
setup-instructions/session_6/: docker-compose-prod.yml  readme.md
setup-instructions/session_7/: readme.md
setup-instructions/session_8/: loki_url.txt  (+3 more)
stacks/: app-stack.yml  monitor-stack.yml  portainer-stack.yml  traefik-stack.yml
traefik/: traefik.toml
watch2win-auth-service/: .env.example  Dockerfile  index.js  package-lock.json  package.json  production.Dockerfile
watch2win-processor-service/: .dockerignore  .env.example  Dockerfile  README.md  production.Dockerfile  pyproject.toml
watch2win-processor-service/app/: config.py  main.py  schemas.py
(+89 files in other folders)
